# ChangeLog for sys-devel/odcctools
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*odcctools-20061118 (03 Dec 2006)
*odcctools-20060413-r1 (03 Dec 2006)

  03 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -odcctools-20051031.ebuild, -odcctools-20051106.ebuild,
  -odcctools-20060123.ebuild, -odcctools-20060413.ebuild,
  +odcctools-20060413-r1.ebuild, +odcctools-20061118.ebuild:
  Rework odcctools to use binutils-config (w00t!), add new home-grown snapshot
  that doesn't compile (very useful)
