@@ -8,10 +8,14 @@ EBUILD odcctools-20061118.ebuild 1416 RMD160 ad4de11fdf2e918c1c89a97e1196161b7ad
 MD5 f598962a52c57a42222ccda795dcd14f odcctools-20061118.ebuild 1416
 RMD160 ad4de11fdf2e918c1c89a97e1196161b7ada3563 odcctools-20061118.ebuild 1416
 SHA256 bc3c1cded3c18b16f8d136b7635099bcb30238d91f934edd8ae1d5cf75b0c3c7 odcctools-20061118.ebuild 1416
-MISC ChangeLog 537 RMD160 bea8192e974b6943eaa8bba48ad3a671c0fad751 SHA1 274eb628ff509bda50d17c03c121d66a1dfebf9b SHA256 2d7107669289a18182880255d17eccea77f0b2a9b7ee426c91a0ff8cc1639839
-MD5 ea015e05b27feb3bde5cd47e87a4f0d6 ChangeLog 537
-RMD160 bea8192e974b6943eaa8bba48ad3a671c0fad751 ChangeLog 537
-SHA256 2d7107669289a18182880255d17eccea77f0b2a9b7ee426c91a0ff8cc1639839 ChangeLog 537
+MISC ChangeLog 623 RMD160 acd2ef1b7beb8df81821aeaed7966bf624b4c07f SHA1 9ea6ba4709aadebcb2bfa4c0c01f5fdcf23e545a SHA256 dc7c4a2c77c23b397b200265e0ea2a499ff762187c4747b60e48ca5fb28188e4
+MD5 9435f18c257a045f278041c98673c93c ChangeLog 623
+RMD160 acd2ef1b7beb8df81821aeaed7966bf624b4c07f ChangeLog 623
+SHA256 dc7c4a2c77c23b397b200265e0ea2a499ff762187c4747b60e48ca5fb28188e4 ChangeLog 623
+MISC metadata.xml 158 RMD160 61ad495b84df949a636009d30b8c3af6d267e469 SHA1 cacd49ab85e7648a81e5dd4791ef9598090ee63d SHA256 6a21555efc71392966785841abafc9b2984d97d75ad574d654db6adc8674b1bd
+MD5 d601a73b745a43c5cd619bc2b936b5e2 metadata.xml 158
+RMD160 61ad495b84df949a636009d30b8c3af6d267e469 metadata.xml 158
+SHA256 6a21555efc71392966785841abafc9b2984d97d75ad574d654db6adc8674b1bd metadata.xml 158
 MD5 6c458a2decf6d21061b06750eb32ab1f files/digest-odcctools-20060413-r1 262
 RMD160 d8033931987462bc15857c433a88eb85d4fd85ea files/digest-odcctools-20060413-r1 262
 SHA256 4fac85b1e35d6337a4fe61d92e46680fd94d515e9421855dbe493159f85dc4ac files/digest-odcctools-20060413-r1 262
